--- a/sections/_contact.scss
+++ b/sections/_contact.scss
@@ -1,17 +1,15 @@
 @import '../abstract/variables';
 
 #contato {
-    height: 60vh;
     background-color: $color-bg;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     .contactsize {
-        max-width: 1250px;
-        width: 100%;
-        margin: 0 auto;
-        padding: 0rem 1.5rem;
-
+        padding: 5rem;
         display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 300px;
         .sobrecontato {
             width: 30%;
             h1 {
