--- a/sections/_projetos.scss
+++ b/sections/_projetos.scss
@@ -2,12 +2,8 @@
 
 #projetos {
     background-color: $color-bg;
-    padding: 5rem 5rem;
+    padding: 5rem;
     .textproject {
-        max-width: 1250px;
-        width: 100%;
-        margin: 0 auto;
-        padding: 5rem 1.5rem;
         h1 {
             font-size: 2rem;
             margin-bottom: 2rem;
@@ -25,10 +21,9 @@
             display: flex;
             justify-content: space-between;
             flex-wrap: wrap;
-            width: 100%;
-    
+            gap: 100px;
             .projeto {
-                width: 100%;
+                width: 29%;
                 margin-bottom: 5rem;
                 display: flex;
                 flex-direction: column;
