--- a/abstract/_variables.scss
+++ b/abstract/_variables.scss
@@ -1,5 +1,5 @@
-$color-bg: #0b0b0b;
-$color-dark: #2b2b2b;
+$color-bg: #ffffff;
+$color-dark: #1b1b1b;
 $color-font-white: #fffcf5;
 
 @keyframes animationTextShow {
