--- a/components/_contentmenuhamburger.scss
+++ b/components/_contentmenuhamburger.scss
@@ -1,101 +1,46 @@
 @import '../abstract/variables';
 
 .mobileMenuContent {
-    display: none;
-    .divisorcontent {
+  display: none;
+  .divisorcontent {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    align-items: center;
+    padding: 10rem 3rem;
+    position: relative;
+    .hamburgerToClose {
+      position: absolute;
+      right: 10%;
+      top: 15%;
       display: flex;
       flex-direction: column;
-      gap: 50px;
+      gap: 0px;
+      cursor: pointer;
+      justify-content: center;
       align-items: center;
-      padding: 10rem 3rem;
-      nav {
-        text-align: center;
-        ul {
-          li {
-            animation: animationTextShow 2.3s forwards;
-            a {
-              font-size: 4rem;
-              margin: 15px 0;
-              color: $color-bg;
-              &:hover {
-                color: #5f5f5f;
-              }
-            }
-          }
-        }
+      z-index: 2;
+
+      .closinghamburger {
+        display: block;
+        width: 30px;
+        height: 3px;
+        background-color: $color-dark;
       }
-      .menubg {
-        color: $color-bg;
-        animation: animationTextShow 2.3s forwards;
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-self: flex-end;
-        .contact {
-          .namecelemail {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            h1 {
-              font-size: 1.3rem;
-              font-style: italic;
-              color: $color-bg;
-            }
-            .iconlink {
-              gap: 15px;
-              a {
-                color: $color-bg;
-              }
-            }
-          }
-          .socialmedia {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            margin-top: 5rem;
-            .underline {
-              text-decoration: none;
-              color: #000;
-              position: relative;
-              span {
-                background-image: linear-gradient(0deg, #000000 0%, #000000 100%);
-                background-position: 100% 100%;
-                background-repeat: no-repeat;
-                background-size: var(--background-size, 100%) 1px;
-                transition: background-size .2s linear var(--background-delay, .15s);
-                font-size: 16px;
-                line-height: 20px;
-                transform: translateZ(0);
-                color: $color-bg;
-              }
-              svg {
-                vertical-align: top;
-                display: inline;
-                line-height: 1;
-                width: 13px;
-                height: 20px;
-                position: relative;
-                left: -2px;
-                fill: none;
-                stroke-linecap: round;
-                stroke-linejoin: round;
-                stroke-width: 1px;
-                stroke: #000000;
-                stroke-dasharray: 7.95 30;
-                stroke-dashoffset: var(--stroke-dashoffset, 46);
-                transition: stroke-dashoffset var(--stroke-duration, .15s) var(--stroke-easing, linear) var(--stroke-delay, 0s);
-              }
-              &:hover {
-                --background-size: 0%;
-                --background-delay: 0s;
-                --stroke-dashoffset: 26;
-                --stroke-duration: .3s;
-                --stroke-easing: cubic-bezier(.3, 1.5, .5, 1);
-                --stroke-delay: .195s;
-              }
-            }
-          }
-        }
+
+      .closinghamburger:nth-child(2) {
+        transform: rotate(-45deg);
+        background-color: $color-dark;
+        width: 40px;
+        transition: .5s ease-in-out;
+      }
+
+      .closinghamburger:nth-child(1) {
+        transform: rotate(45deg);
+        background-color: $color-dark;
+        width: 40px;
+        transition: .5s ease-in-out;
+      }
     }
   }
 }
@@ -103,10 +48,11 @@
 .mobileMenuContent.ativo {
   display: block;
   height: 100vh;
-  width: 100%;
+  width: 25%;
   background-color: #f3f3f3;
   position: fixed;
   top: 0;
+  right: 0;
   z-index: 777;
   animation: animationMenu .5s ease-in-out;
 }
@@ -116,15 +62,15 @@
     transform: translate3d(0, 0, 0);
   }
   100% {
-    transform: translate3d(0, -100%, 0);
+    transform: translate3d(100%, 0, 0);
   }
 }
 
 @keyframes animationMenu {
-    from {
-      transform: translate3d(0, -100%, 0);
-    }
-    to {
-      transform: translate3d(0, 0, 0);
-    }
+  from {
+    transform: translate3d(0, -100%, 0);
   }
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+}
