feat: change the content inside the menu mobile

--- a/abstract/_reset.scss
+++ b/abstract/_reset.scss
@@ -12,7 +12,7 @@
   list-style: none;
   text-decoration: none;
   font-family: 'Montserrat', sans-serif;
-  color: $color-font-white;
+  color: $color-dark;
   font-weight: 500;
   font-size: 1rem;
 }
