--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,7 +43,7 @@
   list-style: none;
   text-decoration: none;
   font-family: "Montserrat", sans-serif;
-  color: #fffcf5;
+  color: #1b1b1b;
   font-weight: 500;
   font-size: 1rem;
 }
@@ -275,7 +275,7 @@ header .headersize .disponiveltowork p {
   list-style: none;
   text-decoration: none;
   font-family: "Montserrat", sans-serif;
-  color: #fffcf5;
+  color: #1b1b1b;
   font-weight: 500;
   font-size: 1rem;
 }
@@ -404,69 +404,137 @@ main .mainsize .textmain .textcircle {
 }
 .mobileMenuContent .divisorcontent {
   display: flex;
+  justify-content: space-between;
   flex-direction: column;
+  width: 100%;
+  height: 100%;
   gap: 50px;
-  align-items: center;
-  padding: 10rem 3rem;
+  padding: 4rem;
   position: relative;
 }
-.mobileMenuContent .divisorcontent .hamburgerToClose {
-  position: absolute;
-  right: 10%;
-  top: 15%;
+.mobileMenuContent .divisorcontent .divisorpart1 .headermobilecontentmenu {
   display: flex;
-  flex-direction: column;
-  gap: 0px;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+.mobileMenuContent .divisorcontent .divisorpart1 .headermobilecontentmenu .languageschange {
+  display: flex;
+  gap: 20px;
+}
+.mobileMenuContent .divisorcontent .divisorpart1 .headermobilecontentmenu .languageschange p {
+  color: #000;
+}
+.mobileMenuContent .divisorcontent .divisorpart1 .headermobilecontentmenu .hamburgerToClose {
   cursor: pointer;
+}
+.mobileMenuContent .divisorcontent .divisorpart1 .headermobilecontentmenu .hamburgerToClose .closingmenu {
+  width: 30px;
+  height: 2px;
+  background-color: #1b1b1b;
+  display: block;
+  position: relative;
+}
+.mobileMenuContent .divisorcontent .divisorpart1 .headermobilecontentmenu .hamburgerToClose .closingmenu:first-child {
+  transform: rotate(45deg);
+}
+.mobileMenuContent .divisorcontent .divisorpart1 .headermobilecontentmenu .hamburgerToClose .closingmenu:last-child {
+  transform: rotate(-45deg);
+}
+.mobileMenuContent .divisorcontent .divisorpart1 .linksmenutoportfolio {
+  margin-top: 5rem;
+}
+.mobileMenuContent .divisorcontent .divisorpart1 .linksmenutoportfolio nav ul li {
+  margin: 20px 0;
+}
+.mobileMenuContent .divisorcontent .divisorpart1 .linksmenutoportfolio nav ul li a {
+  color: #000;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+.mobileMenuContent .divisorcontent .divisorpart2 {
+  width: 100%;
+}
+.mobileMenuContent .divisorcontent .divisorpart2 p {
+  color: #000;
+  font-size: 0.9rem;
+}
+.mobileMenuContent .divisorcontent .divisorpart2 .socialmediasmenu {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 2rem;
+}
+.mobileMenuContent .divisorcontent .divisorpart2 .socialmediasmenu .btn {
+  width: 50px;
+  height: 50px;
+  background: #fff;
+  border-radius: 50%;
+  box-shadow: 0 5px 15px -5px rgba(0, 0, 0, 0.4392156863);
+  color: #ffae00;
+  overflow: hidden;
+  position: relative;
+  display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 2;
 }
-.mobileMenuContent .divisorcontent .hamburgerToClose .closinghamburger {
-  display: block;
-  width: 30px;
-  height: 3px;
-  background-color: #1b1b1b;
+.mobileMenuContent .divisorcontent .divisorpart2 .socialmediasmenu .btn i {
+  font-size: 20px;
+  transition: 0.2s linear;
 }
-.mobileMenuContent .divisorcontent .hamburgerToClose .closinghamburger:nth-child(2) {
-  transform: rotate(-45deg);
-  background-color: #1b1b1b;
-  width: 40px;
-  transition: 0.5s ease-in-out;
+.mobileMenuContent .divisorcontent .divisorpart2 .socialmediasmenu .btn:hover i {
+  transform: scale(1.3);
+  color: #fff;
 }
-.mobileMenuContent .divisorcontent .hamburgerToClose .closinghamburger:nth-child(1) {
+.mobileMenuContent .divisorcontent .divisorpart2 .socialmediasmenu .btn::before {
+  content: "";
+  position: absolute;
+  width: 120%;
+  height: 120%;
+  background: #ffae00;
   transform: rotate(45deg);
-  background-color: #1b1b1b;
-  width: 40px;
-  transition: 0.5s ease-in-out;
+  left: -110%;
+  top: 90%;
+}
+.mobileMenuContent .divisorcontent .divisorpart2 .socialmediasmenu .btn:hover::before {
+  animation: aaa 0.7s 1;
+  top: -10%;
+  left: -10%;
 }
 
 .mobileMenuContent.ativo {
   display: block;
   height: 100vh;
-  width: 25%;
-  background-color: #f3f3f3;
+  max-width: 450px;
+  background-color: #fafafa;
   position: fixed;
   top: 0;
   right: 0;
   z-index: 777;
   animation: animationMenu 0.5s ease-in-out;
+  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
 
-@keyframes animationMenuClose {
-  0% {
-    transform: translate3d(0, 0, 0);
-  }
-  100% {
-    transform: translate3d(100%, 0, 0);
-  }
-}
 @keyframes animationMenu {
   from {
-    transform: translate3d(0, -100%, 0);
+    transform: translate3d(100%, 0, 0);
   }
   to {
     transform: translate3d(0, 0, 0);
+  }
+}
+@keyframes aaa {
+  0% {
+    left: -110%;
+    top: 90%;
+  }
+  50% {
+    left: 10%;
+    top: -30%;
+  }
+  100% {
+    top: -10%;
+    left: -10%;
   }
 }
 @keyframes animationTextShow {
