--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,10 +3,10 @@
 
 @import '../components/header.scss';
 @import '../components/main';
-@import '../components/menuhamburger';
 @import '../components/contentmenuhamburger';
 
 @import '../sections/contact';
 @import '../sections/projetos';
 @import '../sections/skills';
 @import '../sections/about';
+@import '../sections/footer';
