--- a/components/_contentmenuhamburger.scss
+++ b/components/_contentmenuhamburger.scss
@@ -21,6 +21,7 @@
         gap: 20px;
         p {
           color: #000;
+          font-size: .8rem;
         }
       }
       .hamburgerToClose {
