--- a/components/_main.scss
+++ b/components/_main.scss
@@ -2,7 +2,10 @@
 
 main {
     background-color: $color-bg;
-    padding: 5rem;
+    max-width: 1700px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 1.5rem 1rem;
     height: 90vh;
     position: relative;
     .mainsize {
